--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+
+h1{
+  color: white;
+  text-align: center;
+  margin-bottom: 30px;
+  border: 3px solid orange;
+  border-radius: 30px;
+  padding: 10px;
+  background-color: black;
+}
+
+footer{
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+}
